# taskforce-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
src/: commands.rs  domain.rs  formatting.rs  interactive.rs  lib.rs  main.rs  todo_list.rs  tui.rs  utils.rs
tests/: cli_flow.rs
