[package]
name = "todo-cli"
version = "0.2.0"
edition = "2024"
authors = ["Daniel Chaur"]
description = "A TDD-driven todo list CLI built while learning Rust"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dialoguer = "0.11"
colored = "2.0"
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
ctor = "0.2"
